--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ai.fritz.vision-unity",
-  "version": "1.0.3",
+  "name": "ai.fritz.vision",
+  "version": "1.0.4",
   "displayName": "Fritz Vision",
   "description": "Integrate mobile ML experiences with Fritz + Unity",
   "unity": "2019.2",
