--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai.fritz.vision",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "displayName": "Fritz Vision",
   "description": "Integrate mobile ML experiences with Fritz + Unity",
   "unity": "2019.2",
@@ -10,9 +10,9 @@
     "url": "https://fritz.ai"
   },
   "dependencies": {
-    "com.unity.xr.arcore": "2.1.1",
-    "com.unity.xr.arfoundation": "2.1.3",
-    "com.unity.xr.arkit": "2.1.1",
+    "com.unity.xr.arcore": "3.0.0-beta.3",
+    "com.unity.xr.arfoundation": "3.0.0-beta.3",
+    "com.unity.xr.arkit": "3.0.0-beta.3",
     "com.unity.modules.androidjni": "1.0.2",
     "com.unity.modules.xr": "1.0.2"
   }
